--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-color: yellow;
+    background-color: orange;
     color: white;
     font-family: 'Comfortaa', cursive;
     font-size: 1.2em;
@@ -9,27 +9,23 @@ body{
 }
 header, footer {
  color: #ffffff;
- background-color: #aeaca8;
+ background-color: #073DE7;
  width: 100%;
  height: 50px;
 }
 header{
     display: inline-flex;
     font-family: 'Rambla', sans-serif;
-    font-size: 1.1em;
+    font-size: 1.0em;
 }
 
-#container{
+#contenedor{
     background-image: url(../images/phy11.jpg);
     display: block;
     height: 800px;
 }
 
-.otroIntento{
-   color: yellow;
-   font-weight: bold;
-}
-
 footer{
+    background-color: orange;
     text-align: center;
 }
