--- a/css/problema.css
+++ b/css/problema.css
@@ -1,39 +1,62 @@
-.problema{
-    grid-area: a1;
-    background-color: blue;
+#descripcion{
+    grid-area: b1;
+    background-color: #0B5345;
     color: gold;
     border-radius: 5px;
 }
-.datos{
-    grid-area: a2;
-    background-color: red;
+#datos{
+    grid-area: b2;
+    background-color: rgb(231, 37, 23);
     border-radius: 5px;
 }
-.formulas{
-    grid-area: a3;
-    background-color: darkcyan;
+#formulas{
+    grid-area: b3;
+    background-color: #000000;
     border-radius: 5px;
 }
-.calculos{
-    grid-area: a4;
-    background-color: indigo;
+#solucion{
+    grid-area: b4;
+    background-color: #4E07E7;
     color: white;
     border-radius: 5px;
 }
-.resultado{
-    grid-area: a5;
-    background-color: darkgreen;
+#resultado{
+    grid-area: b5;
+    background-color: #BA07E7;
     color: white;
     border-radius: 5px;
 }
-
 #contenedor{
     display: grid;
     grid-template-columns:  repeat(4, [col] 1fr) ;
     grid-template-rows: auto;
-    grid-template-areas: "a1 a1 a1 a1"
-                         "a2 a2 a3 a3"
-                         "a4 a4 a5 a5";
+    grid-template-areas: "a a a a "
+                         "b b b b"
+                         "b b b b"
+                         "b b b b"
+                         "c c c c";
+    width: 100%;
+    height: 100%;  
+}
+ 
+.gridProblema{
+    grid-area: b;  
+}
+#gridHeader{
+    grid-area: a;
+    width: 100%;
+    height: 100px;
+}
+#gridPie{
+    grid-area: c;
+}
+#problema{
+    display: grid;
+    grid-template-columns:  repeat(4, [col] 1fr) ;
+    grid-template-rows: auto;
+    grid-template-areas: "b1 b1 b1 b1"
+                         "b2 b2 b3 b3"
+                         "b4 b4 b5 b5";
     width: 100%;
     height: 100%;
 }
